--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@preact/preset-vite": "^2.5.0",
+    "preact": "^10.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -8,7 +10,6 @@
     "build": "vite build"
   },
   "devDependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.6",
     "vite": "^4.3.9"
   }
 }
