--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "@preact/preset-vite": "^2.5.0",
-    "preact": "^10.15.1",
+    "@vitejs/plugin-react": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
